reports/c7velocity.err.log
Traceback (most recent call last):
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/dsmith4/anaconda3/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/dsmith4/anaconda3/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
betar = np.arange(-0.95,1.0,0.01)
gamr = 1/np.sqrt(1-betar**2)
th = np.pi/4
beta = 0.866
denom = 1-betar*beta*np.cos(th)
bpx = (beta*np.cos(th)-betar)/denom
bpy = beta*np.sin(th)/gamr/denom
bp = np.sqrt(bpx**2+bpy**2)
bpnosr = np.sqrt(((beta*np.cos(th)-betar)**2+(beta*np.sin(th))**2)
plt.figure(figsize=(9,5))
plt.plot(betar,bp,'m-',label='Total Magnitude')
plt.plot(betar,bpx,'b-',label='Horizontal Component')
plt.plot(betar,bpy,'r-',label='Vertical Component')
plt.plot(betar,bpnosr,'g.-',label='Newtonian Answer')
plt.plot([-1,1],[0,0],'k:')
plt.plot([beta,beta],[-1,1],'k:')
plt.xlabel('Relative velocity between frames')
plt.ylabel('Speed of object in primed frame')
plt.legend()
plt.show()
------------------

[0;36m  Cell [0;32mIn[3], line 9[0;36m[0m
[0;31m    bpnosr = np.sqrt(((beta*np.cos(th)-betar)**2+(beta*np.sin(th))**2)[0m
[0m                    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m '(' was never closed

SyntaxError: '(' was never closed (1698138277.py, line 9)

